syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "CareerCloud.gRPC.Protos";

package CareerCloud.gRPC;

service ApplicantWorkHistory {
	rpc ReadApplicantWorkHistory(IdRequestApplicantWorkHistory) returns  (ApplicantWorkHistoryPayload);
	rpc CreateApplicantWorkHistory(ApplicantWorkHistoryPayload) returns (google.protobuf.Empty);
	rpc UpdateApplicantWorkHistory(ApplicantWorkHistoryPayload) returns (google.protobuf.Empty);
	rpc DeleteApplicantWorkHistory(ApplicantWorkHistoryPayload) returns (google.protobuf.Empty);
}

message IdRequestApplicantWorkHistory {
	string Id = 1;
}

message ApplicantWorkHistoryPayload{
	string Id = 1;
    string Applicant = 2;
    string CompanyName = 3; 
    string CountryCode = 4; 
	string Location = 5;
	string JobTitle = 6;
	string JobDescription = 7;
	int32 StartMonth = 8;
	int32 StartYear = 9;
	int32 EndMonth = 10;
	int32 EndYear = 11;

    
}